--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <createDependencyReducedPom>true</createDependencyReducedPom>
                         </configuration>
                     </execution>
                 </executions>
@@ -47,9 +47,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>2.3.1</version><executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                    <configuration>
+                        <outputDirectory>D:\emili\Documents\SMPBot\Server\plugins</outputDirectory>
+                    </configuration>
+                </execution>
+            </executions>
                 <configuration>
-                    <outputDirectory>D:\emili\Documents\SMPBot\Server\plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
