--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <minimizeJar>true</minimizeJar>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                         </configuration>
                     </execution>
@@ -47,18 +48,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.1</version><executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>jar</goal>
-                    </goals>
-                    <configuration>
-                        <outputDirectory>D:\emili\Documents\SMPBot\Server\plugins</outputDirectory>
-                    </configuration>
-                </execution>
-            </executions>
+                <version>2.3.1</version>
+                <inherited>true</inherited>
                 <configuration>
+                    <outputDirectory>D:\emili\Documents\SMPBot\Server\plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
