New config default

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,6 @@
 port: 11111
 
 # The formatting of chat message that are sent from discord to minecraft
-message: "[[&l&9Discord](open_url=https://top.gg/bot/712759741528408064)](hover=Message sent using &6MC-Linker) &8| &l&8%username% &8>> &r%message%"
+message: "&l&9Discord &8| &l&7%username% &8>> &r%message%"
 # The formatting of chat message that are sent from discord to minecraft using `/message`
-private_message: "[[&l&9Discord](open_url=https://top.gg/bot/712759741528408064)](hover=Message sent using &6MC-Linker) &8| &o%username% whispers to you: %message%"
+private_message: "&l&9Discord &8| &o&7%username% whispers to you: %message%"
