--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                 <version>2.3.1</version>
                 <inherited>true</inherited>
                 <configuration>
-                    <outputDirectory>D:\emili\Documents\SMPBot\Server\plugins</outputDirectory>
+                    <outputDirectory>D:\emili\Documents\MC-Linker\Server\plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
