--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.lianecx</groupId>
     <artifactId>Discord-Linker</artifactId>
-    <version>2.4-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Discord-Linker</name>
@@ -98,6 +98,11 @@
             <groupId>com.github.Simonwep</groupId>
             <artifactId>java-express</artifactId>
             <version>0.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.socket</groupId>
+            <artifactId>socket.io-client</artifactId>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.bstats</groupId>
