Added `/linker disconnect` command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ prefix: Discord-Linker
 commands:
   linker:
     description: "Settings for the Discord-Linker plugin"
-    usage: "/linker reload|port|message|private_message|connect"
+    usage: "/linker reload|port|message|private_message|connect|disconnect"
     permission: "discordlinker.linker"
     permission-message: "You do not have permission to use this command."
   verify:
@@ -32,6 +32,8 @@ permissions:
         description: "Allows the user to use the /linker private_message command"
       discordlinker.linker.connect:
         description: "Allows the user to use the /linker connect command"
+      discordlinker.linker.disconnect:
+        description: "Allows the user to use the /linker disconnect command"
   discordlinker.verify:
     description: "Allows the user to use the /verify command"
     default: true
