- Clean up unused resource files - Add License - Restrict mod to client - optimizations
Signed-off-by: Lianecx <emilian.klefe@web.de>

--- a/mod/.gitignore
+++ b/mod/.gitignore
@@ -1,5 +1,8 @@
-.gradle
+.gradle/
+gradle/
 build/
+gradlew
+gradlew.bat
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
