--- a/mod/gradle.properties
+++ b/mod/gradle.properties
@@ -21,11 +21,11 @@ mod.source_url = https://github.com/MC-Linker/Discord-Linker
 mod.issue_tracker = https://github.com/MC-Linker/Discord-Linker/issues
 mod.icon = icon.png
 mod.general_website = https://mclinker.com
+mod.license = Attribution-NonCommercial 4.0 International
 
 # Fabric constants
-# Translates to ${group}.${archives_base_name}.fabric.{mod.fabric.entry.common}
-mod.fabric.entry.common = DiscordLinkerFabric
-mod.fabric.entry.client = DiscordLinkerFabricClient
+# Translates to ${group}.${archives_base_name}.fabric.{mod.fabric.entry.server}
+mod.fabric.entry.server = DiscordLinkerFabric
 
 # Spigot entry simple name (class will be ${group}.${archives_base_name}.spigot.${mod.spigot.main})
 mod.spigot.main = DiscordLinkerSpigot
@@ -38,7 +38,7 @@ mod.spigot.main = DiscordLinkerSpigot
 deps.core.mc.version_range = [VERSIONED]
 
 # Version ranges are INCLUSIVE! The minimum version must be set, this is the value used to retrieve the dependency from network.
-deps.core.fabric.loader.version_range = 0.16.9 UNSET
+deps.core.fabric.loader.version_range = 0.17.2 UNSET
 deps.core.forge.version_range = [VERSIONED]
 deps.core.neoforge.version_range = [VERSIONED]
 deps.core.neoforge.loader.version_range = 2 UNSET
