Update versions to include the most popular, clean up dependencies, and improve Gradle build system
Signed-off-by: Lianecx <emilian.klefe@web.de>

--- a/mod/src/main/resources/META-INF/neoforge.mods.toml
+++ b/mod/src/main/resources/META-INF/neoforge.mods.toml
@@ -16,7 +16,7 @@ authors = "${authors}"
 description = '''
 ${description}
 '''
-environment = "SERVER"
+side = "SERVER"
 
 ${ dependencies_field }
 
