Refactor Gradle build system: modularize configuration streamline code. Added luckperms and socket.io dependencies.
Signed-off-by: Lianecx <emilian.klefe@web.de>

--- a/mod/gradle.properties
+++ b/mod/gradle.properties
@@ -56,8 +56,6 @@ deps.before = UNSET
 # Controls publishing automation
 # Set to false when publishing for real.
 publish.dry_run = true
-# Leaving this field unset will use the mc_min value.
-# To specify versions use the format ver1 ver2 ver3 ...
-publish.acceptable_mc_versions = UNSET
 publish.token.modrinth = UNSET
 publish.token.curseforge = UNSET
+publish.token.github = UNSET
