Reset branch to before multi-loader
Signed-off-by: Lianecx <emilian.klefe@web.de>

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,11 @@ buildNumber.properties
 
 # Common working directory
 run/
+
+# Gradle
+.gradle/
+build/
+gradle/
+.gradle-cache/
+gradlew
+gradlew.bat
