Fix incorrect main class link
Signed-off-by: Lianecx <emilian.klefe@web.de>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Discord-Linker
 version: ${project.version}
-main: me.lianecx.discordlinker.spigot.DiscordLinker
+main: me.lianecx.discordlinker.DiscordLinker
 api-version: 1.12
 authors: [ Lianecx ]
 softdepend:
